namespaces/live.cloud-platform.service.justice.gov.uk/laa-civil-case-api-uat/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-civil-case-api-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-civil-case-api-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-source-namespace
  namespace: laa-civil-case-api-uat
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-manage-your-civil-cases-production
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-manage-your-civil-cases-staging
    - namespaceSelector:
        matchLabels:
          cloud-platform.justice.gov.uk/namespace: laa-manage-your-civil-cases-uat
